@@ -1,6 +1,7 @@
 2008-10-29  Perry McFarlane  <perry_m@fastmail.fm>
 * afile.[ch], atari.c, sio.c:  Support .pro images
 * ui.c: replace ^R in source with \022
+* pbi_bb.c, pbi_mio.c: correct Util_filenamenotset error.
 
 
 2008-10-13  Matthias Reichl  <hias@horus.com>
